--- a/Portfolio Project - Folium Maps for NYC, Austin, and Chicago Datasets.ipynb
+++ b/Portfolio Project - Folium Maps for NYC, Austin, and Chicago Datasets.ipynb
@@ -1923,12 +1923,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f25c0ef6",
+   "cell_type": "markdown",
+   "id": "faa33ae7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Inspiration Credit - Alex Aklson"
+   ]
   },
   {
    "cell_type": "code",
